# HEKTOR_VS

./: .gitignore  ADVANCED_FEATURES_README.md  CMakeLists.txt  CREATE_v2.3.0_PR.sh  DOCUMENTATION_GAPS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW.md  INSTALL.md  MANIFEST.in  NATIVE_UI_TECHNOLOGY_COMPARISON.md  NEW_FEATURES.md  PACKAGE_NAMING.md  README.md  RELEASE_v3.0.1_INSTRUCTIONS.md  SECURITY.md  V2.2.0_RELEASE_SUMMARY.md  V2.3.0_PR_DESCRIPTION.md  VERSION_BUMP_SUMMARY.md  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  temp.md
.github/: FUNDING.yml
.studio/: system_map.md
api/: .env.example  README.md  main.py  requirements.txt
benchmark/: CMakeLists.txt  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md
benchmark/database/memory/: test_memory_profiling.py
benchmark/reports/: REPORT_TEMPLATE.md
benchmark/scripts/: validate.sh
docs/: 00_INDEX.md  01_INTRODUCTION.md  01_README.md  02_GETTING_STARTED.md  02_INSTALLATION.md  03_QUICKSTART.md  03_USER_GUIDE.md  04_DATA_FORMATS.md  04_USER_GUIDE.md  05_ARCHITECTURE.md  05_DATA_INGESTION.md  06_ARCHITECTURE.md  06_DATA_FORMATS.md  07_API_REFERENCE.md  07_DATA_INGESTION.md  08_EMBEDDINGS_MODELS.md  08_MODELS.md  09_MATH.md  09_VECTOR_OPERATIONS.md  10_AI_TRAINING.md  10_HYBRID_SEARCH.md  11_DISTRIBUTED_SYSTEM.md  11_LOGGING.md  12_ML_FRAMEWORK.md  12_USAGE_EXAMPLES.md  13_DEPLOYMENT.md  13_LLM_ENGINE.md  14_QUANTIZATION.md  14_REAL_WORLD_APPLICATIONS.md  15_LOGGING_MONITORING.md  15_OPENTELEMETRY_INSTALLATION.md  16_DEPLOYMENT.md  17_HTTP_ADAPTER.md  17_PERFORMANCE_TUNING.md  18_ADVANCED_FEATURES.md  18_SECURITY.md  19_REAL_WORLD_APPLICATIONS.md  20_API_REFERENCE.md  21_USAGE_EXAMPLES.md  22_PYTHON_BINDINGS.md  (+20 more)
examples/: README.md  cthulu_roundtrip.py  distributed_demo.py  hybrid_search_demo.py  python_hybrid_search.py  rag_framework_demo.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  (+2 more)
src/cli/: CMakeLists.txt  README.md  cli.cpp  main.cpp  output_formatter.cpp
src/cli/commands/: collection_commands.cpp  data_commands.cpp  db_commands.cpp  export_commands.cpp  hybrid_commands.cpp  index_commands.cpp  ingest_commands.cpp  search_commands.cpp
src/cli/docs/: TESTING.md
(+235 files in other folders)
